beginning/practice1.css
@font-face{
    font-family: "spirit";
    src: url("./Fonts/spirit/spirit.ttf");
}
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    text-decoration: none;
    list-style: none;
    color: rgba(231, 231, 231, 0.729);
    font-family:"spirit";
}
.page{
    min-height: 100vh;
    width: 100%;
    padding:2rem 3.5rem;
    background: url(./images/main-bg.jpg);
    background-size:cover;
    background-position: center;
    background-repeat: no-repeat;
    /* isolation: isolate; */
    position: relative;
    overflow: hidden;
}
.page::after{
    content:"";
    position:absolute;
    inset:0;
    background:linear-gradient(
        to bottom,
        transparent 55%,
        rgba(0,0,0,1) 100%
    );
    pointer-events:none;
}
.nav-bar,
.main,
.gallery{
    position:relative;
    z-index:1;
}
.nav-bar{
    width: 100%;
    max-width: 1300px;
    margin: 0 auto;
    height: 10vh;
    padding: 0px 35px;

    position: relative;
    display: flex;
    align-items: center;
    justify-content: space-between;

    border: 1px solid rgba(251, 255, 0, 0.456);
    background-color: rgba(255, 255, 255, 0);
    border-radius: 20px;
    backdrop-filter: blur(10px);
    transition: background-color 0.2s ease-in-out 0.1s;
}
.nav-bar:hover{
    background-color:rgba(255, 255, 255, 0.144);
}
.nav-logo{
    font-size: 1.7rem;
    transition: color 0.3s ease 0.1s;
    position: relative;
}
.nav-logo::after{
    content: '';
    position: absolute;
    background-color: rgb(198, 198, 198);
    border-radius: 10px;
    bottom: 0;
    left: 0;
    height: 3px;
    width: 0%;
    transition: 
    background-color 0.3s ease 0.1s,
    width 0.3s ease 0.1s
    ;
}
.nav-logo:hover::after{
    background-color: white;
    width: 100%;
}
.nav-logo:hover{
    color: white;
}
.nav-list{
    display: flex;
    justify-content: center;
    /* gap:3rem; */
    gap:clamp(1rem,4vw,3rem);
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    font-size: 1.4rem;
}
.nav-list a{
    position: relative;
    transition: color 0.3s ease 0.1s;
}
.nav-list a::after{
    position: absolute;
    content: '';
    width: 0%;
    height: 2px;
    bottom: 0;
    left: 0;
    background-color: rgb(198, 198, 198);
    border-radius: 10px;
    transition: 
    background-color 0.3s ease 0.1s,
    width 0.3s ease 0.1s;
}
.nav-list a:hover::after{
    background-color: white;
    width: 100%;
}
.nav-list a:hover{
    color: white;
}

.icon i{
    background-color: rgba(80, 80, 80, 0.5);
    height: 35px;
    width: 35px;
    border-radius: 10px;
    display: flex;
    align-items: center;
    justify-content: center;
    transition: color 0.3s ease 0.1s,
    transform 0.3s ease 0.1s,
    font-size 0.3s ease 0.1s;
}
.icon:hover i{
    color: white;
    transform:scale(1.2);
}
.hero{
    margin: 10px auto 0;
    width: 100%;
    max-width: 1100px;
    min-height: max-content;
    padding: clamp(5px, 2vw, 20px);
    background-color: rgba(255, 255, 255, 0.204);
    border-radius: 20px ;
    backdrop-filter: blur(2px);
    display: flex;
    align-items: center;
}
.hero-container{
    min-height: max-content;
    width: 100%;
    max-width: 1100px;
    display: flex;
    justify-content:space-between;
    align-items: center;
    gap:clamp(40px,8vw,100px);
    /* background-color: aqua; */
}
.hero-content{
    flex: 1;
    max-width: 600px;
}
.hero-content p,
.hero-content h1{
    color: rgb(255, 255, 255);
}
.hero-content h1{
    font-size: 6rem;
    margin-top: 10px;
}
.hero-upper{
    /* padding-bottom: 50px; */
    letter-spacing: 10px;
}
.hero-txt{
    margin-top:20px;
    font-size: 1.2rem;
    line-height: 1.6rem;
    max-width: 620px;
}
.side-btn{
    display: flex;
    gap: 35px;
    margin-left: auto;
}
.arrows{
    font-size: 1.2rem;
    height: 50px;
    width: 50px;
    background: rgba(93, 93, 93, 0.5);
    border-radius: 10px;
    scale: 1.5;
    transition: scale 0.3s ease 0.1s;
}
.arrows:hover{
    scale: 1.2;
}
.arrows i{
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100%;
    width: 100%;
    transition: color 0.3s ease 0.1s;
}
.arrows i:hover {
    color: white ;
}
.gallery{
    max-width: 1000px;
    margin: auto;
    min-height: max-content;
    display: flex;
    flex-direction: column;
}
.gallery-heading{
    margin:20px;
    text-align: center;
}
.img-container{
    display: grid;
    gap:clamp(12px,1vw,30px);
    justify-content: center;
    align-items: center;
    grid-template-columns:repeat(auto-fit,minmax(140px,1fr))
}
.card{
    height: 240px;
    width: 140px;
    overflow: hidden;
    border-radius: 15PX;
}
.card img{
    height: 0px;;
    width: 100%;
    object-fit: cover;
    display: block;
}
.card h3{
    color: white;
    margin-top: 8px;
    text-align: center;
    font-size: 0.9rem;
}
.card{
    position: relative;
    height: 200px;
    width: 140px;
    overflow: hidden;
    border-radius: 15px;
}

.card img{
    width: 100%;
    height: 100%;
    object-fit: cover;
    display: block;
}

@media (max-width: 600px){

    .page{
        padding: 1rem;
    }

    .nav-bar{
        height: 70px;
        padding: 0 18px;
    }

    .nav-list{
        display: none;
    }

    .nav-logo{
        font-size: 1.2rem;
    }

    .hero{
        padding: 28px 18px;
        min-height: auto;
    }

    .hero-container{
        text-align: center;
        flex-direction: column;
        align-items: flex-start;
        gap: 25px;
    }

    .hero-content h1{
        font-size: clamp(3rem, 16vw, 5rem);
    }

    .hero-upper{
        letter-spacing: 6px;
        font-size: 0.8rem;
    }

    .hero-txt{
        font-size: 1rem;
        line-height: 1.5;
    }

    .side-btn{
        align-self: center;
        margin-left: 0;
        gap:20px;
    }

    .img-container{
        grid-template-columns: 1fr;
        justify-items: center;
    }
    .arrows{
    font-size: 1rem;
    height: 30px;
    width: 30px;
}
}

